Update build and serve scripts and renamed to docsearch

--- a/dev/index.html
+++ b/dev/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Documentation</title>
   <link rel="stylesheet" type="text/css" href="/stripe.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/docsearch.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style.css" media="screen" />
   <link rel="shortcut icon" href="favicon.ico">
 </head>
 
