--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
   <title>Documentation</title>
   <link rel="stylesheet" type="text/css" href="/stripe.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/docsearch.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/style.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/docsearch-styling.css" media="screen" />
   <link rel="shortcut icon" href="favicon.ico">
 </head>
 
