feat(global): Add responsive feature to the dropdown
keep sub level (div.algolia-docsearch-suggestion--subcategory-column)

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="/stripe.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/docsearch.css" media="screen" />
   <link rel="shortcut icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body id="documentation">
