adding multi input feature closes #230

--- a/scripts/playground.html
+++ b/scripts/playground.html
@@ -20,9 +20,17 @@
         <div class="col-md-12">
 
             <div class="input-group">
-                <div id="">
-                </div>
                 <input type="search" class="form-control" id="q">
+            </div>
+        </div>
+        <div class="mt-1">
+            <p>2</p>
+
+        </div>
+        <div class="col-md-12">
+
+            <div class="input-group">
+                <input type="search" class="form-control" id="z">
             </div>
         </div>
     </div>
@@ -35,7 +43,7 @@
     <script type="text/javascript"> docsearch({
             apiKey: '25626fae796133dc1e734c6bcaaeac3c',
             indexName: 'docsearch',
-            inputSelector: '#q',
+            inputSelector: ['#q', '#z'],
             debug: true // Set debug to true if you want to inspect the dropdown
         });
     </script>
