--- a/scripts/playground.html
+++ b/scripts/playground.html
@@ -43,7 +43,7 @@
     <script type="text/javascript"> docsearch({
             apiKey: '25626fae796133dc1e734c6bcaaeac3c',
             indexName: 'docsearch',
-            inputSelector: ['#q', '#z'],
+            inputSelector: '#q,#z',
             debug: true // Set debug to true if you want to inspect the dropdown
         });
     </script>
