Better explanation of playground
Co-Authored-By: s-pace <sylvain.pace@algolia.com>

--- a/scripts/playground.html
+++ b/scripts/playground.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="mt-1">
-            <h1> Search thanks to the assests serves http://127.0.0.1:8080/ </h1>
+            <h1> Search thanks to the assets served at http://127.0.0.1:8080/ </h1>
             <p>Do not forget to hard refresh: cmd + maj + R</p>
 
         </div>
