--- a/scripts/playground.html
+++ b/scripts/playground.html
@@ -1,61 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  
+  <head>
     <meta charset="utf-8" />
     <title>DocSearch playground</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <!-- at the end of the HEAD -->
     <link rel="stylesheet" href="http://127.0.0.1:8080/docsearch.min.css" />
-
-</head>
-
-<body>
+  </head>
+  
+  <body>
     <div class="container">
-        <div class="mt-1">
-            <h1> Search thanks to the assets served at http://127.0.0.1:8080/ </h1>
-            <p>Do not forget to hard refresh: cmd + maj + R</p>
-
+      <div class="mt-1">
+        <h1>Assets are served from http://127.0.0.1:8080/ </h1>
+      </div>
+      <div class="col-md-12">
+        <div class="input-group">
+          <input type="search" placeholder="First DocSearch input" class="form-control" id="q">
         </div>
-        <div class="col-md-12">
-
-            <div class="input-group">
-                <input type="search" class="form-control" id="q">
-            </div>
+      </div>
+      <div class="col-md-12">
+        <div class="input-group">
+          <input type="search" placeholder="Second DocSearch input" class="form-control" id="z">
         </div>
-        <div class="mt-1">
-            <p>2</p>
-
-        </div>
-        <div class="col-md-12">
-
-            <div class="input-group">
-                <input type="search" class="form-control" id="z">
-            </div>
-        </div>
+      </div>
     </div>
-
-
     <!-- at the end of the BODY -->
-    <script type="text/javascript" src="http://127.0.0.1:8080/docsearch.min.js"></script>
-    <script type="text/javascript"> docsearch({
-            apiKey: '25626fae796133dc1e734c6bcaaeac3c',
-            indexName: 'docsearch',
-            inputSelector: '#q,#z',
-            debug: true // Set debug to true if you want to inspect the dropdown
-        });
+    <script type="text/javascript" src="http://127.0.0.1:8080/docsearch.js"></script>
+    <script type="text/javascript">
+      docsearch({
+        apiKey: '25626fae796133dc1e734c6bcaaeac3c',
+        indexName: 'docsearch',
+        inputSelector: '#q,#z',
+        debug: true // Set debug to true if you want to inspect the dropdown
+      });
     </script>
     <style>
-        .container {
-            margin: 10%;
-        }
+      .container {
+        margin: 10%;
+      }
 
-        .input-group {
-            width: 60%;
-            margin: auto;
-            margin-top: 10%;
-        }
+      .input-group {
+        width: 60%;
+        margin: auto;
+        margin-top: 10%;
+      }
     </style>
-</body>
+  </body>
 
 </html>
