--- a/scripts/playground.html
+++ b/scripts/playground.html
@@ -15,12 +15,7 @@
       </div>
       <div class="col-md-12">
         <div class="input-group">
-          <input type="search" placeholder="First DocSearch input" class="form-control" id="q">
-        </div>
-      </div>
-      <div class="col-md-12">
-        <div class="input-group">
-          <input type="search" placeholder="Second DocSearch input" class="form-control" id="z">
+          <input type="search" placeholder="DocSearch input" class="form-control" id="q">
         </div>
       </div>
     </div>
@@ -30,11 +25,15 @@
       docsearch({
         apiKey: '25626fae796133dc1e734c6bcaaeac3c',
         indexName: 'docsearch',
-        inputSelector: '#q,#z',
+        inputSelector: '#q',
+        // handleSelected(input, event, suggestion) {
+        //   console.info("You selected", suggestion);
+        // },
         debug: true // Set debug to true if you want to inspect the dropdown
       });
     </script>
     <style>
+
       .container {
         margin: 10%;
       }
