--- a/scripts/playground.html
+++ b/scripts/playground.html
@@ -26,11 +26,11 @@
         apiKey: '25626fae796133dc1e734c6bcaaeac3c',
         indexName: 'docsearch',
         inputSelector: '#q',
-        handleSelected(input, event, suggestion) {
-          console.info(input);
-          console.info(event);
-          console.info(suggestion);
-        },
+        // handleSelected(input, event, suggestion) {
+        //   console.info(input);
+        //   console.info(event);
+        //   console.info(suggestion);
+        // },
         debug: true // Set debug to true if you want to inspect the dropdown
       });
     </script>
