feat(docsearch): implement dropdown

--- a/examples/vanilla/index.html
+++ b/examples/vanilla/index.html
@@ -13,8 +13,14 @@
   </head>
 
   <body>
-    <input id="searchbox" placeholder="Search articles" />
-    <div id="results"></div>
+    <div id="searchbox"></div>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+      dolorem maiores minus facere, dolor dolores quis ut obcaecati eaque
+      pariatur, similique voluptate nemo sit laudantium harum. Praesentium omnis
+      numquam fugiat.
+    </p>
 
     <script src="app.js"></script>
   </body>
