fix(theme): add design for mobile

--- a/examples/vanilla/index.html
+++ b/examples/vanilla/index.html
@@ -12,12 +12,14 @@
   <body>
     <div id="searchbox"></div>
 
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-      dolorem maiores minus facere, dolor dolores quis ut obcaecati eaque
-      pariatur, similique voluptate nemo sit laudantium harum. Praesentium omnis
-      numquam fugiat.
-    </p>
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+        dolorem maiores minus facere, dolor dolores quis ut obcaecati eaque
+        pariatur, similique voluptate nemo sit laudantium harum. Praesentium
+        omnis numquam fugiat.
+      </p>
+    </div>
 
     <script src="app.js"></script>
   </body>
