chore(examples): update vanilla example

--- a/examples/vanilla/index.html
+++ b/examples/vanilla/index.html
@@ -10,7 +10,15 @@
   </head>
 
   <body>
-    <div id="searchbox"></div>
+    <nav class="navbar">
+      <h1>Playground</h1>
+
+      <div class="navbar-menu">
+        <div id="searchbox"></div>
+
+        <a href="https://github.com/algolia/docsearch">GitHub</a>
+      </div>
+    </nav>
 
     <div class="container">
       <p>
