--- a/examples/js-demo/index.html
+++ b/examples/js-demo/index.html
@@ -15,6 +15,6 @@
       <div id="docsearch"></div>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
