test again @docsearch/js-example

--- a/examples/js-demo/index.html
+++ b/examples/js-demo/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1>DocSearch v3 - Vanilla JavaScript</h1>
-      <button>A button</button>
+      <button data-testid="btn">A button</button>
       <div id="docsearch"></div>
     </div>
 
