--- a/examples/cypress/index.html
+++ b/examples/cypress/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -5,15 +6,13 @@
 
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 
-    <title>DocSearch v3 - Vanilla JavaScript</title>
+    <title>DocSearch v3 - React</title>
   </head>
 
   <body>
-    <div class="container">
-      <h1>DocSearch v3 - Vanilla JavaScript</h1>
-      <div id="docsearch"></div>
-    </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="src/index.js"></script>
   </body>
 </html>
