--- a/examples/cypress/index.html
+++ b/examples/cypress/index.html
@@ -6,7 +6,7 @@
 
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 
-    <title>DocSearch v3 - React</title>
+    <title>DocSearch v3 - React - Cypress</title>
   </head>
 
   <body>
